完善删除功能，实现下拉框功能，增加数据库配置文件方式

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>loginFliter</filter-name>
-		<url-pattern>/login</url-pattern>
+		<url-pattern>/customer/*</url-pattern>
 	</filter-mapping>
 
 	<filter>
